--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditTicketActivity"></activity>
+        <activity android:name=".CreditActivity"></activity>
+        <activity android:name=".EditTicketActivity" />
         <activity android:name=".HistoryActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
