--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity android:name=".CreditActivity"></activity>
         <activity android:name=".EditTicketActivity" />
-        <activity android:name=".HistoryActivity" />
+        <activity android:name=".ListTicketActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
